Revision history for Perl module Dist-Zilla-PluginBundle-Author-DOHERTY

{{$NEXT}}
    * Add fork_is_authoritative to make GitHub::Meta point
      to your fork instead of the parent repo (ie in the
      case where you are the new maintainer)

0.29      2012-06-14
    * Adjust the files that can be dirty for Git::Check

0.28      2012-06-14
    * Only do post-release stuff if it was a real release
    * Require @GitHub 0.22
        * bug related to finding a fork's parent repo
        * Now uses Config::Identity to get credentials

0.27      2012-05-25
    * Add SchwartzRatio plugin
    * Allow setting github = 0 to disable GitHub::Meta and GitHub::Update

0.26      2012-03-03
    * Produce README.mkdn
    * Actually accept push_to multiple times, as advertised

0.25      2012-01-17
    * Bump version prereq for my Pod Weaver pluginbundle - bugfixes

0.24      2011-12-15
    * Don't include dist.ini in the dist
    * Don't index corpus/
    * Don't include v in the version number
    * Don't use prereqs, just list them as prereqs

v0.23     2011-08-27
    * Also make GH URL point at metacpan
    * Make signed tags
    * Include -TRIAL on trial releases
    * Allow specifying the git remote to push to after release

0.021     2011-08-24
    * Fix documentation for enabling/disabling TestingMania tests
    * Require newer Dist::Zilla::Plugin::GitHub, which points metadata to parent forks on GH
    * Tweet URL to metacpan

0.020     2011-07-08
    * Also ship Build.PL

0.019     2011-05-09
    * Bump MinimumPerl version to scan only perl files
    * Add Clean plugin to run clean automatically after release
    * Renamed no_twitter to twitter

0.017     2011-04-19
    * Use goo.gl for URL shortening

0.016     2011-04-17
    * Update Github plugins
    * Remove TestingMania version prerequisite
    * Remove Repository/Bugtracker (covered by Github::Meta)

0.015     2011-04-02
    * Add support for specifying the changelog filename

0.014     2011-02-18