@@ -9,10 +9,12 @@ twitter = 0
 github = 0
 
 [Prereqs]
+Dist::Zilla                                 = 4.102341 ; dzil authordeps
 Dist::Zilla::Plugin::CheckChangesHasContent = 0
 Dist::Zilla::Plugin::CheckExtraTests        = 0
 Dist::Zilla::Plugin::Clean                  = 0
 Dist::Zilla::Plugin::CopyFilesFromBuild     = 0 ; to copy specified files
+Dist::Zilla::Plugin::DualBuilders           = 0
 Dist::Zilla::Plugin::Git::Check             = 0
 Dist::Zilla::Plugin::Git::Commit            = 0
 Dist::Zilla::Plugin::Git::Describe          = 0
@@ -29,6 +31,7 @@ Dist::Zilla::Plugin::ReadmeMarkdownFromPod  = 0
 Dist::Zilla::Plugin::SchwartzRatio          = 0
 Dist::Zilla::Plugin::SurgicalPodWeaver      = 0.0015 ; to avoid circular dependencies
 Dist::Zilla::Plugin::Twitter                = 0.010 ;  Support for choosing WWW::Shorten::$site via WWW::Shorten::Simple
+Dist::Zilla::Plugin::UploadToGoogleCode     = 0
 Dist::Zilla::PluginBundle::TestingMania     = 0 ; No version prereq for easier testing
 Pod::Weaver::PluginBundle::Author::DOHERTY  = 0.006 ; bugfixes
 Pod::Weaver::Section::BugsAndLimitations    = 1.102670 ; to read from D::Z::P::Bugtracker
